--- a/Front-end/pages/messages.html
+++ b/Front-end/pages/messages.html
@@ -21,9 +21,13 @@
             <a class="navbar-brand" href="/">
               <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
             </a>
-            <div class="search-container">
+            <div class="search-container" style="flex: 1 1 500px; max-width: 600px;">
               <i class="bi bi-search search-icon"></i>
-              <input type="text" class="form-control search-input" placeholder="Search chat">
+              <input type="text"
+                     class="form-control search-input"
+                     placeholder="Search people and posts here..."
+                     id="mainSearchInput"
+                     autocomplete="off">
             </div>
             <div class="navbar-nav ms-auto d-flex gap-1 nav-icons">
               <a class="nav-link" href="timeline.html" data-bs-toggle="tooltip" title="Home">
@@ -47,48 +51,55 @@
               </a>
             </div>
             <div class="navbar-nav nav-icons work-menu">
-              <!-- <a class="nav-link" href="#" id="menuDropdown" data-bs-toggle="dropdown" title="Menu">
-                <i class="bi bi-grid-3x3-gap-fill"></i>
-              </a>
-              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="menuDropdown">
-                <h6 class="dropdown-header">Menu</h6>
-                <a class="dropdown-item" href="groups.html">
-                  <i class="bi bi-people-fill me-2 text-primary"></i> Groups
-                </a>
-                <a class="dropdown-item" href="pages.html">
-                  <i class="bi bi-file-earmark-text me-2 text-success"></i> Pages
-                </a>
-                <a class="dropdown-item" href="birthdays.html">
-                  <i class="bi bi-gift-fill me-2 text-danger"></i> Birthdays
-                </a>
-              </div> -->
               <a class="nav-link profile-link" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-                <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+                <img id="navBarProfileImg" src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
                 <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
               </a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <a href="profile.html">
                   <div class="d-flex align-items-center px-3 py-2">
-                    <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                    <img id="navProfileImg" src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                     <div>
-                      <h6 class="mb-0">Dilsara Thiranjaya</h6>
+                      <h6 id="navProfileName" class="mb-0">Name</h6>
                     </div>
                   </div>
                 </a>
                 <hr class="my-1">
-                <a class="dropdown-item" href="admin/dashboard.html">
+                <a class="dropdown-item" href="admin/dashboard.html" id="adminButton">
                   <i class="fa-solid fa-user-tie me-2"></i></i> Administration
                 </a>
                 <a class="dropdown-item" href="settings.html">
                   <i class="bi bi-gear-fill me-2"></i> Settings & Privacy
                 </a>
-                <a class="dropdown-item text-danger" href="login.html">
+                <a class="dropdown-item text-danger" href="#" id="logoutButton">
                   <i class="bi bi-box-arrow-right me-2"></i> Logout
                 </a>
               </div>
             </div>
           </div>
         </nav>
+
+        <!-- Search Overlay -->
+        <div class="search-overlay">
+          <div class="search-header">
+            <div class="container-fluid">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-search fs-4 text-muted me-3"></i>
+                <input type="text"
+                       class="search-input-full"
+                       placeholder="Search people and posts here..."
+                       id="fullSearchInput"
+                       autocomplete="off">
+                <button class="btn-close-search ms-auto">
+                  <i class="bi bi-x-lg"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="search-results-full container-fluid">
+            <!-- Search results will be dynamically inserted here -->
+          </div>
+        </div>
 
         <!-- Messages Container -->
         <div class="container messages-container">
@@ -319,6 +330,19 @@
                     </button>
                   </div>
                 </div>
+
+                <!-- Call Container -->
+                <div id="call-container" style="display: none;">
+                  <div class="call-header">
+                    <h5 id="call-title"></h5>
+                    <button class="btn btn-danger" onclick="endCall()">End Call</button>
+                  </div>
+                  <div class="video-container">
+                    <div id="remote-video-container"></div>
+                    <div id="local-video-container"></div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
@@ -329,6 +353,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/js/messages.js"></script>
+    <script src="../assets/js/search.js"></script>
   </body>
 </html>
